unpackaged/main/default/objects/Activity/fields/Assigned_From__c.field-meta.xml
<CustomField>
    <fullName>Assigned_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>