unpackaged/main/default/objects/Activity/fields/Assigned_To_Is_Me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Is_Me__c</fullName>
    <formula>Owner:User.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Is Me</label>
    <type>Checkbox</type>
</CustomField>