unpackaged/main/default/objects/Activity/fields/Assigned_To_My_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_My_Team__c</fullName>
    <formula>CONTAINS($User.My_Teams_Active__c, Insider_Team__r.Insider_Team__c)
||
CONTAINS($User.My_Teams_Inactive__c, Insider_Team__r.Insider_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To My Team</label>
    <type>Checkbox</type>
</CustomField>