unpackaged/main/default/objects/Activity/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>