unpackaged/main/default/objects/Activity/fields/Insider_Team__c.field-meta.xml
<CustomField>
    <fullName>Insider_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insider Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Insider_Team__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>only ACTIVE Insider Teams are filtered</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Insider_Team__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>