unpackaged/main/default/objects/Activity/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that this Reconfirmation Task is part of a larger Itinerary.</description>
    <inlineHelpText>Denotes that this Reconfirmation Task is part of a larger Itinerary.</inlineHelpText>
    <label>Itinerary</label>
    <type>Checkbox</type>
</CustomField>