unpackaged/main/default/objects/Activity/fields/Logbook_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Logbook_Reference_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logbook Reference Date</label>
    <type>Date</type>
</CustomField>