unpackaged/main/default/objects/Activity/fields/Reassign_To__c.field-meta.xml
<CustomField>
    <fullName>Reassign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>