unpackaged/main/default/objects/Activity/fields/Reconfirmation_Color__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Color__c</fullName>
    <formula>IMAGE( 
CASE(Reconfirmation_Status__c, 
"To be reconfirmed", "/resource/1658869323000/yellowsquare", 
"Reconfirmed", "/resource/1658869342000/greysquare", 
""),
"", 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reconfirmation Color</label>
    <type>Text</type>
</CustomField>