unpackaged/main/default/objects/Activity/fields/Reconfirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconfirmation Date</label>
    <type>Date</type>
</CustomField>