unpackaged/main/default/objects/Activity/fields/Reconfirmation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reconfirmation Date/Time</label>
    <type>DateTime</type>
</CustomField>