unpackaged/main/default/objects/Activity/fields/Reconfirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reconfirmation_Status__c</fullName>
    <label>Reconfirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be reconfirmed</fullName>
            </value>
            <value>
                <fullName>Reconfirmed</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>LOD - Change Date</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reconfirmed - Not Sending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>