unpackaged/main/default/objects/Activity/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <label>Sender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courtney Sider</fullName>
            </value>
            <value>
                <fullName>Drew Kohl</fullName>
            </value>
            <value>
                <fullName>Emma Muller</fullName>
            </value>
            <value>
                <fullName>Jaime Eisenberg</fullName>
            </value>
            <value>
                <fullName>Jill Diedrich</fullName>
            </value>
            <value>
                <fullName>Katie Couri</fullName>
            </value>
            <value>
                <fullName>Lindsi Shine</fullName>
            </value>
            <value>
                <fullName>Melinda Erickson</fullName>
            </value>
            <value>
                <fullName>Daniela Nashawaty</fullName>
            </value>
            <value>
                <fullName>Jordyn Bloom</fullName>
            </value>
            <value>
                <fullName>Gia Scaduto</fullName>
            </value>
            <value>
                <fullName>Sarah Magrini</fullName>
            </value>
            <value>
                <fullName>Jordan Story</fullName>
            </value>
            <value>
                <fullName>Natalie Biedron</fullName>
            </value>
            <value>
                <fullName>Maggie Kearns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>